--- a/clasificacion.html
+++ b/clasificacion.html
@@ -22,17 +22,26 @@
         <table class="tabla-clasificacion">
             <thead>
                 <tr>
-                    <th>Posición</th>
+                    <th>Pos</th>
                     <th>Equipo</th>
-                    <th>Partidos jugados</th>
-                    <th>Ganados</th>
-                    <th>Perdidos</th>
-                    <th>Sets a favor</th>
-                    <th>Sets en contra</th>
+                    <th>PJ</th>
+                    <th>PG</th>
+                    <th>PP</th>
+                    <th>SF</th>
+                    <th>SC</th>
                 </tr>
             </thead>
             <tbody id="clasificacion"></tbody>
         </table>
+
+        <div class="leyenda">
+            <p><strong>Pos:</strong> Posición</p>
+            <p><strong>PJ:</strong> Partidos Jugados</p>
+            <p><strong>PG:</strong> Partidos Ganados</p>
+            <p><strong>PP:</strong> Partidos Perdidos</p>
+            <p><strong>SF:</strong> Sets a Favor</p>
+            <p><strong>SC:</strong> Sets en Contra</p>
+        </div>
     </div>
 
     <script src="clasificacion.js"></script>
