--- a/clasificacion.html
+++ b/clasificacion.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <title>CV Pantoja</title>
     <link rel="stylesheet" href="clasificacion.css">
