--- a/clasificacion.html
+++ b/clasificacion.html
@@ -14,7 +14,7 @@
             <li><a href="index.html"><img src="images/toja.png" height="100px"/></a></li>
             <li><a href="index.html">Partidos</a></li>
             <li><a href="clasificacion.html">Clasificación</a></li>
-            <li><a href="jornadas.html">Todas las jornadas</a></li>
+            <li><a href="jornadas.html">Jornadas</a></li>
           </ul>
         </nav>
       </header>
