--- a/temporada1.html
+++ b/temporada1.html
@@ -15,7 +15,7 @@
             <li><a href="index.html">Partidos</a></li>
             <li><a href="clasificacion.html">Clasificación</a></li>
             <li><a href="jornadas.html">Jornadas</a></li>
-            <li><a href="temporada1.html">Temporada 24/25</a></li>
+            <li><a href="temporada1.html">Temp. 24/25</a></li>
           </ul>
         </nav>
       </header>
